--- a/StretchyHeader/Base.lproj/Main.storyboard
+++ b/StretchyHeader/Base.lproj/Main.storyboard
@@ -25,12 +25,28 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="109" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zdG-AS-ZkU">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="kQR-V6-ChK">
+                                    <rect key="frame" x="0.0" y="64" width="375" height="264"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="UCl-DE-dqU">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="264"/>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" red="1" green="0.14117647059999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="UCl-DE-dqU" secondAttribute="trailing" id="5dm-Rb-9ft"/>
+                                        <constraint firstItem="UCl-DE-dqU" firstAttribute="top" secondItem="kQR-V6-ChK" secondAttribute="top" id="MRD-Dj-vU9"/>
+                                        <constraint firstAttribute="bottom" secondItem="UCl-DE-dqU" secondAttribute="bottom" id="fM4-py-yev"/>
+                                        <constraint firstItem="UCl-DE-dqU" firstAttribute="leading" secondItem="kQR-V6-ChK" secondAttribute="leading" id="y2d-uh-p0X"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="1MM-1I-JhH" customClass="TableViewCell" customModule="StretchyHeader" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="109"/>
+                                        <rect key="frame" x="0.0" y="292" width="375" height="109"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1MM-1I-JhH" id="h7U-Vh-DxE">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="109"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="108"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="rnw-6X-Ihh">
@@ -106,4 +122,7 @@
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="header" width="621" height="412"/>
+    </resources>
 </document>
