--- a/StretchyHeader/Base.lproj/Main.storyboard
+++ b/StretchyHeader/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Table View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="TableViewController" customModule="StretchyHeader" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="TableViewController" customModule="StretchyHeader" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -26,17 +26,26 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="kQR-V6-ChK">
-                                    <rect key="frame" x="0.0" y="64" width="375" height="264"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="264"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="UCl-DE-dqU">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="264"/>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="November 26" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vl1-nD-vFB">
+                                            <rect key="frame" x="10" y="10" width="355" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" red="1" green="0.14117647059999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="UCl-DE-dqU" secondAttribute="trailing" id="5dm-Rb-9ft"/>
+                                        <constraint firstItem="vl1-nD-vFB" firstAttribute="leading" secondItem="kQR-V6-ChK" secondAttribute="leading" constant="10" id="647-TJ-La0"/>
+                                        <constraint firstAttribute="trailing" secondItem="vl1-nD-vFB" secondAttribute="trailing" constant="10" id="DrV-hT-FHD"/>
                                         <constraint firstItem="UCl-DE-dqU" firstAttribute="top" secondItem="kQR-V6-ChK" secondAttribute="top" id="MRD-Dj-vU9"/>
+                                        <constraint firstItem="vl1-nD-vFB" firstAttribute="top" secondItem="kQR-V6-ChK" secondAttribute="top" constant="10" id="QcU-NT-yAX"/>
                                         <constraint firstAttribute="bottom" secondItem="UCl-DE-dqU" secondAttribute="bottom" id="fM4-py-yev"/>
                                         <constraint firstItem="UCl-DE-dqU" firstAttribute="leading" secondItem="kQR-V6-ChK" secondAttribute="leading" id="y2d-uh-p0X"/>
                                     </constraints>
@@ -96,6 +105,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="4Z9-gw-QH3"/>
                     <connections>
+                        <outlet property="headerView" destination="kQR-V6-ChK" id="OZU-VA-T4C"/>
                         <outlet property="tableView" destination="zdG-AS-ZkU" id="J75-tA-ZLx"/>
                     </connections>
                 </viewController>
